--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header><img src="root/MadLibs-logo.png" alt="Mad Libs Logo" width="80%" style="text-align: center; border-bottom: 10px green solid;"></header>
+    <header><img src="MadLibs-logo.png" alt="Mad Libs Logo" width="80%" style="text-align: center; border-bottom: 10px green solid;"></header>
     <h1>Mad Libs Lab</h1>
     <h3>Please fill in the following blanks to complete the story.</h3>
     <input type="text" id="landmark" placeholder="landmark">
